added new file  addcourse

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".login" />
         <activity android:name=".profile" />
         <activity android:name=".edtprofile" />
-        <activity android:name=".student_reg"></activity>
+        <activity android:name=".student_reg" />
+        <activity android:name=".addcourse"></activity>
     </application>
 
 </manifest>
