--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,14 @@
         <activity android:name=".com404" />
         <activity android:name=".com405" />
         <activity android:name=".com406" />
-        <activity android:name=".com407"></activity>
+        <activity android:name=".com407" />
+        <activity android:name=".studentcom401" />
+        <activity android:name=".studentcom402" />
+        <activity android:name=".studentcom403" />
+        <activity android:name=".studentcom404" />
+        <activity android:name=".studentcom405" />
+        <activity android:name=".studentcom407" />
+        <activity android:name=".studentcom406"></activity>
     </application>
 
 </manifest>
