--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,25 +25,19 @@
         <activity android:name=".addcourse" />
         <activity android:name=".attendance" />
         <activity android:name=".report" />
-        <activity android:name=".list_course" />
         <activity android:name=".course_outline" />
-        <activity
-            android:name=".com401"
-            android:label="@string/title_activity_com401"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".com402" />
         <activity android:name=".com403" />
         <activity android:name=".com404" />
         <activity android:name=".com405" />
-        <activity android:name=".com406" />
-        <activity android:name=".com407" />
-        <activity android:name=".studentcom401" />
         <activity android:name=".studentcom402" />
         <activity android:name=".studentcom403" />
         <activity android:name=".studentcom404" />
         <activity android:name=".studentcom405" />
-        <activity android:name=".studentcom407" />
-        <activity android:name=".studentcom406"></activity>
+        <activity android:name=".attendance_402" />
+        <activity android:name=".attendance_403" />
+        <activity android:name=".attendance_404" />
+        <activity android:name=".attendance_405" />
     </application>
 
 </manifest>
